# tempura

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
examples/simple/tmpl/: {{name}}.txt
src/: main.rs
tests/: main.rs  v0_1_0.rs  v0_1_5.rs
