[package]
name = "tempura"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.83"
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempdir = "0.3.7"
